--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@huggingface/transformers": "^3.5.2",
     "@supabase/supabase-js": "^2.50.0",
+    "@xenova/transformers": "^2.17.2",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
